--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,87 +23,27 @@ body.main{
     background-attachment: fixed;
 }
 
-body {
-    background-image: linear-gradient(90deg,#0288D1,#03A9F4);
+/* Login */
+#login .container #login-row #login-column #login-box {
+margin-top: 120px;
+max-width: 600px;
+height: 320px;
+border: 1px solid #9C9C9C;
+background-color: #EAEAEA;
 }
-.main-navigation {
-    list-style-type: none;
-    margin-top: 55px;
-    float: right;
-    font-size: 1.2em;
+#login .container #login-row #login-column #login-box #login-form {
+padding: 20px;
 }
-
-.main-navigation > li {
-    display: inline-block;
-    margin-right: 30px;
-}
-
-.main-navigation >  li a:link,
-.main-navigation > li a:visited{
-    padding : 8px 0;
-    color:rgba(255, 255, 255, 0.6);
-    text-decoration: none;
-    text-transform: uppercase;
-    border-bottom: 2px solid transparent;
-    transition:border-bottom 0.2s;
+#login .container #login-row #login-column #login-box #login-form #register-link {
+margin-top: -85px;
 }
 
-.main-navigation > li a:hover,
-.main-navigation > li a:active{
-    border-bottom:2px solid rgba(34, 167, 240, 1);
+/* Sign Up */
+.centered-form{
+	margin-top: 60px;
 }
 
-.main-navigation > li > a.active {
-    color: rgba(34, 167, 240, 0.6);
-}
-
-.jumbotron {
-    background: transparent;
-    color: rgba(255,255,255,0.9);
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    bottom:0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    z-index: -1;
-}
-
-.centered {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.centered > h1 {
-    font-size: 3.5em;
-}
-
-.jumbotron .start-button {
-    background: transparent;
-    border: none;
-}
-
-.btn.start-button:link ,
-.btn.start-button:visited{
-    display: inline-block;
-    padding : 10px 30px;
-    width: 12rem;
-    color: rgba(255,255,255,1);
-    font-size: 1rem;
-    text-decoration: none;
-    border-radius: 200px;
-    transform: translate(100%,45%);
-    transition: background-color 0.2s, border 0.2s;
-    background-color: rgba(34, 167, 240, 1);
-    border:1px solid rgba(34, 167, 240, 1);
-}
-
-.btn.start-button:hover ,
-.btn.start-button:active {
-    background-color: rgba(30, 139, 195, 1);
-    border:1px solid rgba(30, 139, 195, 1); 
+.centered-form .panel{
+	background: rgba(255, 255, 255, 0.8);
+	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
