--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,10 @@
 
 */
 
+/* ------------------------------------------- */
+                /* Common */
+/* ------------------------------------------- */
+
 * {
     padding: 0;
     margin: 0;
@@ -23,7 +27,10 @@ body.main{
     background-attachment: fixed;
 }
 
-/* Login */
+/* ------------------------------------------- */
+                /* Login */
+/* ------------------------------------------- */
+
 #login .container #login-row #login-column #login-box {
 margin-top: 120px;
 max-width: 600px;
@@ -38,7 +45,11 @@ padding: 20px;
 margin-top: -85px;
 }
 
-/* Sign Up */
+/* ------------------------------------------- */
+                /* Sign up */
+/* ------------------------------------------- */
+
+
 .centered-form{
 	margin-top: 60px;
 }
@@ -46,4 +57,88 @@ margin-top: -85px;
 .centered-form .panel{
 	background: rgba(255, 255, 255, 0.8);
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+}
+/* ------------------------------------------- */
+                /* Workout */
+/* ------------------------------------------- */
+
+/* Style the tab */
+.tab {
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    /* width: 30%; */
+    width: 10%;
+    /* height: 300px; */
+    height: 550px;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current "tab button" class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    float: left;
+    /* padding: 0px 12px; */
+    border: 1px solid #ccc;
+    width: 90%;
+    border-left: none;
+    /* height: 300px; */
+    height: 550px;
+
+  }
+
+  /* Log */
+  
+  /* div.row.Item {
+    width: 290px;
+    height: 300px;
+  } */
+
+  div.row.items {
+    width: 100%;
+    margin : 0;
+  }
+
+  div.row.item {
+    width: 100%;
+    margin: 15px auto 0;
+  }
+
+div.thumbnail {
+    border: none;
+  }
+
+  .Title {
+    font-size: 0.9em;
+    text-align: center;
+    text-transform: capitalize;
+    margin: 3px;
+}
+
+.thumbnail > img {
+  width: 100%;
+  height: 200px;
 }
