--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -2,9 +2,62 @@
 
 <% include partials/navigation%>
 
-
-    <div class="container">
-        <p>workout</p>
+<div class='container'>
+    <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'Chest')" id="defaultOpen">Chest</button>
+        <button class="tablinks" onclick="openCity(event, 'Back')">Back</button>
+        <button class="tablinks" onclick="openCity(event, 'Legs')">Legs</button>
+        <button class="tablinks" onclick="openCity(event, 'Shoulder')">Shoulders</button>
+        <button class="tablinks" onclick="openCity(event, 'Triceps')">Triceps</button>
+        <button class="tablinks" onclick="openCity(event, 'Biceps')">Biceps</button>
+        <button class="tablinks" onclick="openCity(event, 'Abs')">Abs</button>
     </div>
 
+    <div id="Chest" class="tabcontent">
+
+        <div class = "row items">
+
+            <% for(var i=0;i<3;i++){%>
+                <div class = "col-md-4">
+                    <div class="row item">
+                        <div class="thumbnail">
+                            <img src="<%= Exercises[i].ImagePath %>" alt="<%= Exercises[i].Name %>" class="img-thumbnail img-responsive">
+                            <div class="caption">
+                                <p class="Title"><strong> <%= Exercises[i].Name %> </strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <% } %>
+        </div>
+
+    </div>
+
+    <div id="Back" class="tabcontent">
+
+    </div>
+
+    <div id="Legs" class="tabcontent">
+
+    </div>
+
+    <div id="Shoulders" class="tabcontent">
+
+    </div>
+
+    <div id="Triceps" class="tabcontent">
+
+    </div>
+
+    <div id="Biceps" class="tabcontent">
+
+    </div>
+
+    <div id="Abs" class="tabcontent">
+
+    </div>
+
+</div>
+
+<script src='/js/workout.js'></script>
 <% include partials/footer%>
