--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,32 +11,32 @@
                     <form role="form" action='/signup' method='post'>
                         <div class="row">
                         <div class="form-group">
-                    <input type="text" name="name" id="name" class="form-control input-sm" placeholder="Name">
+                    <input type="text" name="name" id="name" class="form-control input-sm" placeholder="Name" required>
                         </div>
                         </div>
 
                         <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address" required>
                         </div>
 
                         <div class="form-group">
-                            <input type="text" name="phone-number" id="phone-number" class="form-control input-sm" placeholder="Phone Number">
+                            <input type="text" name="phone-number" id="phone-number" class="form-control input-sm" placeholder="Phone Number" minlength='1' maxlength='32' required>
                         </div>
 
                         <div class="row">
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password" minlength='6' maxlength='32' required>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <div class="form-group">
-                                    <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+                                    <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" minlength='6' maxlength='32' placeholder="Confirm Password" required>
                                 </div>
                             </div>
                         </div>
                         
-                        <input type="submit" value="Register" class="btn btn-info btn-block">
+                        <input type="submit" value="Register" class="btn btn-info btn-block sign-up-button">
                     
                     </form>
                 </div>
@@ -44,5 +44,7 @@
         </div>
     </div>
 </div>
+
+<script src='/js/signup.js'></script>
 
 <% include partials/footer %> 
