--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,16 +1,27 @@
-<nav>
-<ul class="main-navigation">
-  <li><a href="/workout">Workout</a></li>
-  <li><a href="/aboutus">About Us</a></li>
-  <li><a href="/contactus">Contact Us</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Blaze Muscle</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <%if(!user){%>  
-  <li><a href="/signin">Sign In</a></li>
-  <li><a href="/signup">Sign Up</a></li>
-  <%}%>
-
-  <%if(user){%>
-  <li><a href="/signout">Sign Out</a></li>
-  <%}%>
-</ul>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="/workout">Workout</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="/log">Log</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="/history">history</a>
+      </li>
+      
+    </ul>
+  </div>
 </nav>
