Added Cart Snippet

--- a/views/log.ejs
+++ b/views/log.ejs
@@ -9,67 +9,98 @@
 
 <% if(typeof log !== 'undefined' && log.length > 0){ %>
 
-    <% log.forEach(function(current){ %>
+    <div class="row log-list">
+        <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Exercise</th>
+                        <th>Weight</th>
+                        <th class="text-center">Sets</th>
+                        <th class="text-center">Reps</th>
+                        <th> </th>
+                    </tr>
+                </thead>
+                <tbody>
+
+    <% for(var i=0;i<log.length;i++) {%>
     
-        <div class="row log-item">
-        
-            <div class="col-md-3">
-                <div class="thumbnail">
-                    <img src="<%= current.ImagePath %>" class="exercise-image" alt="<%= current.Name %>">
+    <tr class="row log-item">
+        <td class="col-sm-8 col-md-6">
+            <div class="media">
+            <!-- Product Thumbnail -->
+                <a class="thumbnail pull-left"> <img class="media-object" src="<%=log[i].ImagePath%>" style="width: 72px; height: 72px;"> </a>
+                <!--  -->
+
+
+                <div class="media-body">
+                    <!-- Exercise name and muscle targeted -->
+                    <h3 class="media-heading exercise-name"><%=log[i].Name%></h4>
+                    <h4 class="media-heading"><%=log[i].Muscle%></h5>
+                    <!-- <span>Status: </span><span class="text-success"><strong>In Stock</strong></span> -->
                 </div>
             </div>
-            <div class="col-md-6">
-                <h3 class='exercise-name'> <%= current.Name %> </h3>
+        </td>
+        <td class="col-sm-1 col-md-1" style="text-align: center">
+            <!-- Weight Input -->
+            <div class="reps-group">
+            <button type="button" class="btn btn-danger" id="decrement" onclick="decrement(event)">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+            <input type="number" id="weight" name="weight" class="weight-box" value="1" oninput="validateQuantity(event)">           
+            <button type="button" class="btn btn-success" id="increment" onclick="increment(event)">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            </button>
             </div>
-            <div class="col-md-3">
-                <br>
-                <br>
-                <p>
-                    <div class="set-group">
-                    <button type="button" class="btn btn-danger" id="decrement" onclick="decrement(event)">
-                    <i class="fa fa-minus" aria-hidden="true"></i>
-                    </button>
-                    <input type="number" id="set" name="set" class="set-box" value="1" oninput="validateQuantity(event)">
-                    <button type="button" class="btn btn-success" id="increment" onclick="increment(event)">
-                    <i class="fa fa-plus" aria-hidden="true"></i>
-                    </button>
-                    </div>
-                    
-                    <div class="reps-group">
-                    <button type="button" class="btn btn-danger" id="decrement" onclick="decrement(event)">
-                    <i class="fa fa-minus" aria-hidden="true"></i>
-                    </button>
-                    <input type="number" id="reps" name="reps" class="reps-box" value="1" oninput="validateQuantity(event)">
-                    <button type="button" class="btn btn-success" id="increment" onclick="increment(event)">
-                    <i class="fa fa-plus" aria-hidden="true"></i>
-                    </button>
-                    </div>
-                    
-                    &nbsp;&nbsp;&nbsp;
-                </p>
-                <i class="fa fa-trash" onClick ='removeItem(event,"<%= current.Name %>")'></i>
-                <hr>
+        </td>
+        <!-- Sets Input -->
+        <td>
+            <div class="set-group">
+            <button type="button" class="btn btn-danger" id="decrement" onclick="decrement(event)">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+            <input type="number" id="set" name="set" class="set-box" value="1" oninput="validateQuantity(event)">
+            <button type="button" class="btn btn-success" id="increment" onclick="increment(event)">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            </button>
             </div>
-
-        </div>
-
-        <% }) %>
+        </td>
+        
+        <!-- Reps Input -->
+        <td>
+            <div class="reps-group">
+            <button type="button" class="btn btn-danger" id="decrement" onclick="decrement(event)">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+            <input type="number" id="reps" name="reps" class="reps-box" value="1" oninput="validateQuantity(event)">
+            <button type="button" class="btn btn-success" id="increment" onclick="increment(event)">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            </button>
+            </div>
+        </td>
+        
+        <td class="col-sm-1 col-md-1">
+            <i class="fa fa-trash" onclick ='removeItem(event,"<%= log[i].Name %>")'></i>
+        </td>
+        </tr>
+        <% } %>
+            </tbody>
+            </table>
         <div>
             <hr>
+            <div class="row">
+                <form>
+                    <button class="btn btn-success btn-lg save-button" onclick='save(event)'>Save Workout</button>
+                    <button class="btn btn-default btn-lg empty-log-button" id="empty-log">Empty Log</button>
+                </form>
+            </div>
         </div>
         <% } else { %>
         <h3> Log is Empty! &nbsp; Select items from exercises to add. </h3>
         <% } %>   
         </div> 
         <br>
-
-        <div class="row">
-            <form>
-            <button class="btn btn-success btn-lg save-button" onclick='save(event)'>Save Workout</button>
-            <button class="btn btn-default btn-lg empty-log-button" id="empty-log">Empty Log</button>
-            </form>
         </div>
-    </div>
 
 <script src='/js/log.js'></script>
 
